2007-11-28 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 466: rename long function name dc1394_memory_is_save_in_operation
	           to shorter dc1394_memory_busy.
	* SVN 455: reinstate the verification code for video mode, format and
	           iso status
        * SVN 454: - temporarily remove the definition of the broadcast function
	             in control.h, since it's code has been commented-out in
		     control.c.
		   - remove video_mode, framerate and is_iso_on from
		     dc1394camera_t. 
	
2007-11-27  David Moore  <dcm@acm.org>
	* SVN 453: Reinstate the "unit_directory" field of dc1394camera_t

2007-11-27 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 452: Initialize dc1394_camera_t.flags to zero when a new
	           camera is created.
        * SVN 451: Rename register access functions to dc1394_*.
	           Move the camera detection API earlier in control.h
        * SVN 450: Fix missing Basler error strings in internal.c

2007-11-26 David Moore  <dcm@acm.org>
	* SVN 449: Fix dc1394_multiview and dc1394_vloopback for new API
	* SVN 448: Update svn:ignore
	* SVN 447: Massive update of the platform specific API to support
		   the new enumeration API.  The new platform API is defined
		   in platform.h and is private to libdc1394.  Enumeration
		   functionality has split off into enumeration.c.  Some
		   naming inconsistencies of public functions have also been
		   addressed -- mostly functions in register.h.
		   dc1394_find_cameras() is now officially gone.  The examples
		   have been updated to reflect the new method of camera
		   enumeration.  Platform code for Linux, Juju, and Mac OS X
		   has been updated for the new enumeration API.

2007-11-14 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 446: Add the unit argument to the call to dc1394_new_camera
	           in juju/control.c. The argument is hardcoded to zero, so
		   you can only access the unit 0 on juju (same as on osx).
		   To be further updated...
